--- a/demo/testapp/templates/base.html
+++ b/demo/testapp/templates/base.html
@@ -6,6 +6,8 @@
     <title>Bootstrap Navbar Example</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/css/todos.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
