--- a/demo/testapp/static/css/todos.css
+++ b/demo/testapp/static/css/todos.css
@@ -1,3 +1,18 @@
 .capsule{
-    border: 1px solid black;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 1rem;
+}
+
+.todo_item{
+    border: 2px solid #CCC;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.buttons{
+    display: flex;
 }
