--- a/demo/testapp/templates/base.html
+++ b/demo/testapp/templates/base.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Navbar Example</title>
+    <title>Todo Web</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     {% load static %}
-    <link rel="stylesheet" href="{% static '/css/todos.css' %}">
+    <link rel="stylesheet" href="{% static '/css/todos.css' %}?{% now 'U' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -39,7 +39,10 @@
         </div>
     </nav>
 
-    <div class="container">{% block content %} {% endblock %}</div>
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
