--- a/demo/testapp/static/css/todos.css
+++ b/demo/testapp/static/css/todos.css
@@ -2,6 +2,8 @@
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 1rem;
+    height: 400px;
+    overflow-y: auto;
 }
 
 .todo_item{
