--- a/demo/testapp/templates/todos.html
+++ b/demo/testapp/templates/todos.html
@@ -8,36 +8,74 @@
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Task</th>
-                    <th scope="col">Status</th>
                     <th scope="col">Deadline</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
                 {% for todo in todos %}
-                <tr>
-                    <td>{{ todo.title }}</td>
-                    <td>{% if todo.completed %}Completed{% else %}Not Completed{% endif %}</td>
-                    <td>
-                        {% if todo.deadline_day %}
-                            {{ todo.deadline_day|date:"m/d/Y H:i" }}
-                        {% else %}
-                            No deadline
-                        {% endif %}
-                    </td>
-                    <td class="buttons">
-                      <button class="btn btn-success">Done</button>
-                      <button class="btn btn-primary">Updt</button>
-                      <form method="POST" action="{% url 'delete_todo_item' todo.id %}">
-                        {% csrf_token %}
-                        <button class="btn btn-danger">X</button>
-                      </form>
-                    </td>
-                </tr>
+                {% if not todo.completed %}
+                    <tr>
+                        <td>{{ todo.title }}</td>
+                        <td>
+                            {% if todo.deadline_day %}
+                                {{ todo.deadline_day|date:"m/d/Y H:i" }}
+                            {% else %}
+                                No deadline
+                            {% endif %}
+                        </td>
+                        <td class="buttons">
+                          <form method="POST" action="{% url 'change_state' todo.id %}">
+                            {% csrf_token %}
+                            <button class="btn btn-success">Done</button>
+                          </form>
+                          <button class="btn btn-primary">Updt</button>
+                          <form method="POST" action="{% url 'delete_todo_item' todo.id %}">
+                            {% csrf_token %}
+                            <button class="btn btn-danger">X</button>
+                          </form>
+                        </td>
+                    </tr>
+                {% endif %}
                 {% endfor %}
             </tbody>
         </table>
     </div>
     <h2 class="text-left">Completed:</h2>
+    <div class="capsule">
+        <table class="table table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Task</th>
+                    <th scope="col">Deadline</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for todo in todos %}
+                {% if todo.completed %}
+                    <tr>
+                        <td>{{ todo.title }}</td>
+                        <td>
+                            {% if todo.deadline_day %}
+                                {{ todo.deadline_day|date:"m/d/Y H:i" }}
+                            {% else %}
+                                No deadline
+                            {% endif %}
+                        </td>
+                        <td class="buttons">
+                          <button class="btn btn-success">Done</button>
+                          <button class="btn btn-primary">Updt</button>
+                          <form method="POST" action="{% url 'delete_todo_item' todo.id %}">
+                            {% csrf_token %}
+                            <button class="btn btn-danger">X</button>
+                          </form>
+                        </td>
+                    </tr>
+                {% endif %}
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 {% endblock %}
