updating todo done, adding update_todo.html and adding functionality to updt button

--- a/demo/testapp/templates/todos.html
+++ b/demo/testapp/templates/todos.html
@@ -16,7 +16,7 @@
                 {% for todo in todos %}
                 {% if not todo.completed %}
                     <tr>
-                        <td>{{ todo.title }}</td>
+                        <td class="title">{{ todo.title }}</td>
                         <td>
                             {% if todo.deadline_day %}
                                 {{ todo.deadline_day|date:"m/d/Y H:i" }}
@@ -29,7 +29,10 @@
                             {% csrf_token %}
                             <button class="btn btn-success">Done</button>
                           </form>
-                          <button class="btn btn-primary">Updt</button>
+                          <form method="GET" action="{% url 'update_todo_item' todo.id %}">
+                            {% csrf_token %}
+                            <button class="btn btn-primary">Updt</button>
+                          </form>
                           <form method="POST" action="{% url 'delete_todo_item' todo.id %}">
                             {% csrf_token %}
                             <button class="btn btn-danger">X</button>
@@ -55,7 +58,7 @@
                 {% for todo in todos %}
                 {% if todo.completed %}
                     <tr>
-                        <td>{{ todo.title }}</td>
+                        <td class="title">{{ todo.title }}</td>
                         <td>
                             {% if todo.deadline_day %}
                                 {{ todo.deadline_day|date:"m/d/Y H:i" }}
@@ -64,8 +67,10 @@
                             {% endif %}
                         </td>
                         <td class="buttons">
-                          <button class="btn btn-success">Done</button>
-                          <button class="btn btn-primary">Updt</button>
+                          <form method="POST" action="{% url 'change_state' todo.id %}">
+                            {% csrf_token %}
+                            <button class="btn btn-warning">Undone</button>
+                          </form>
                           <form method="POST" action="{% url 'delete_todo_item' todo.id %}">
                             {% csrf_token %}
                             <button class="btn btn-danger">X</button>
