--- a/demo/testapp/static/css/todos.css
+++ b/demo/testapp/static/css/todos.css
@@ -3,6 +3,7 @@
     border-radius: 10px;
     padding: 1rem;
     height: 400px;
+    margin-bottom: 4rem;
     overflow-y: auto;
 }
 
@@ -17,4 +18,7 @@
 
 .buttons{
     display: flex;
+}
+.title{
+    width:700px;
 }
