--- a/demo/testapp/templates/base.html
+++ b/demo/testapp/templates/base.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="/add_todo_item/">Add todo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shopping lists</a>
+                        <a class="nav-link" href="/add_shopping_list/">Shopping lists</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
