--- a/demo/testapp/templates/add_shopping_list.html
+++ b/demo/testapp/templates/add_shopping_list.html
@@ -5,8 +5,9 @@
        <h1 class="text-center">Add a shopping list</h1>
        <!-- Main form container -->
        <div id="form-container">
-           <form method="POST" class="mt-4" id="shopping-list-form">
+           <form method="POST" action="{% url 'add_shopping_list' %}"  class="mt-4">
                {% csrf_token %}
+               
                <div class="mt-4" id="shopping-list">
                    <input type="text" class="form-control" id="list-name" name="list-name" placeholder="Enter shopping list name" maxlength="200" required>
                </div>
@@ -18,7 +19,7 @@
                    <button type="button" class="btn btn-primary" id="add-item-btn">+</button>
                </div>
                <div class="mb-3">
-                   <button type="button" class="btn btn-primary" id="finish-list">Add List</button>
+                   <button type="submit" class="btn btn-primary" id="finish-list">Add List</button>
                </div>
            </form>
        </div>
