shopping lists fist preview, shopping list names does not work atm.

--- a/demo/testapp/templates/base.html
+++ b/demo/testapp/templates/base.html
@@ -28,7 +28,10 @@
                         <a class="nav-link" href="/add_todo_item/">Add todo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/add_shopping_list/">Shopping lists</a>
+                        <a class="nav-link" href="/add_shopping_list/">Add shopping list</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="/shopping_lists/">Shopping lists</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
