--- a/demo/testapp/templates/shopping_lists.html
+++ b/demo/testapp/templates/shopping_lists.html
@@ -2,18 +2,15 @@
 
 {% block content %}
     <h1>Shopping Lists</h1>
-    <ul>
-        {% for shopping_list in shopping_lists %}
-            <li>
-                <h2>{{ shopping_list.name }}</h2>
-                <ul>
-                    {% for item in shopping_list.items.all %}
-                        <li>{{ item.name }}</li>
-                    {% endfor %}
-                </ul>
-            </li>
-        {% endfor %}
-    </ul>
+    {% for shopping_list in shopping_lists %}
+        <h2>{{ shopping_list.name }}:</h2>
+        <ul>
+            {% for item in shopping_list.items.all %}
+                <li>{{ item.name }}</li>
+            {% endfor %}
+        </ul>
+        
+    {% endfor %}
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
