--- a/demo/testapp/templates/base.html
+++ b/demo/testapp/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static '/css/todos.css' %}?{% now 'U' %}">
+    <link rel="stylesheet" href="{% static '/css/shopping_lists.css' %}?{% now 'U' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
