--- a/demo/testapp/templates/add_shopping_list.html
+++ b/demo/testapp/templates/add_shopping_list.html
@@ -11,8 +11,19 @@
                <div class="mt-4" id="shopping-list">
                    <input type="text" class="form-control" id="list-name" name="list-name" placeholder="Enter shopping list name" maxlength="200" required>
                </div>
-               <div class="mt-4" id="list-item">
-                   <input type="text" class="form-control add_list_item" id="name" name="name" placeholder="Enter item" maxlength="200" required>
+               <div class="mt-4 list_item_box"  id="list-item">
+                   <label class="list_item_name" for="name">Item Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter item" maxlength="100" required>
+
+                    <label for="quantity">Quantity:</label>
+                    <input type="number" class="form-control" id="quantity" name="quantity" min="1" value="1" required>
+
+                    <label for="unit">Unit:</label>
+                    <select class="form-control" id="unit" name="unit">
+                        <option value="g">g</option>
+                        <option value="ml">ml</option>
+                        <option value="pcs">pcs</option>
+                    </select>
                </div>
 
                <div class="mb-3">
