--- a/demo/testapp/templates/shopping_lists.html
+++ b/demo/testapp/templates/shopping_lists.html
@@ -24,7 +24,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="buttons">
+        <div class="shopping_buttons">
             <form method="POST">
             {% csrf_token %}
             <button class="btn btn-danger">Delete</button>
