delete shopping_list done

--- a/demo/testapp/templates/add_shopping_list.html
+++ b/demo/testapp/templates/add_shopping_list.html
@@ -24,6 +24,7 @@
                                 <option value="g">g</option>
                                 <option value="ml">ml</option>
                                 <option value="pcs">pcs</option>
+                                <option value="l">l</option>
                             </select>
                     </div>
                 </div>
