updating shopping list almost done, main problems are: list name not in text-line, item name label does not have enough space, updating list buttons not tested

--- a/demo/testapp/templates/shopping_lists.html
+++ b/demo/testapp/templates/shopping_lists.html
@@ -29,7 +29,7 @@
             {% csrf_token %}
             <button class="btn btn-danger">Delete</button>
             </form>
-            <form method="GET" >
+            <form method="GET" action="{% url 'update_shopping_list' shopping_list.id %}">
             {% csrf_token %}
             <button class="btn btn-primary">Update</button>
             </form>
