shopping list updates done, next step: accounts and logging in.

--- a/demo/testapp/templates/update_shopping_list.html
+++ b/demo/testapp/templates/update_shopping_list.html
@@ -16,7 +16,7 @@
                         <div class="mt-4 list_item_box">
                             <input type="hidden" name="item_id" value="{{ item.id }}">
                             
-                            <label for="name">Item Name:</label>
+                            <label class="list_item_name" for="name">Item Name:</label>
                             <input type="text" class="form-control" name="name" value="{{ item.name }}" required>
 
                             <label for="quantity">Quantity:</label>
