--- a/demo/testapp/templates/home_page.html
+++ b/demo/testapp/templates/home_page.html
@@ -1,5 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Home page</h1>
+    <div class="col-md-6 offset-md-3">
+        <h1>Login</h1>
+        <br>
+        <form method="POST" action ="{% url 'Home page'%}">
+            {% csrf_token %}
+            <div class="mb-3">
+                <input type="text" class="form-control" name="first_name", placeholder="First name" required> 
+            </div>
+            <div class="mb-3">
+                <input type="password" class="form-control" name="password", placeholder="Password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+
+    </div>
+
 {% endblock %}
