--- a/demo/testapp/templates/home_page.html
+++ b/demo/testapp/templates/home_page.html
@@ -1,13 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
+    {% if user.is_authenticated  %}
+    <h1>Home Page</h1>
+
+    {% else %}
+
     <div class="col-md-6 offset-md-3">
         <h1>Login</h1>
         <br>
         <form method="POST" action ="{% url 'Home page'%}">
             {% csrf_token %}
             <div class="mb-3">
-                <input type="text" class="form-control" name="first_name", placeholder="First name" required> 
+                <input type="text" class="form-control" name="username", placeholder="Username" required> 
             </div>
             <div class="mb-3">
                 <input type="password" class="form-control" name="password", placeholder="Password" required>
@@ -16,5 +21,6 @@
         </form>
 
     </div>
+    {% endif %}
 
 {% endblock %}
