logging in and logging out done and tested

--- a/demo/testapp/templates/base.html
+++ b/demo/testapp/templates/base.html
@@ -34,11 +34,16 @@
                     <li>
                         <a class="nav-link" href="/shopping_lists/">Shopping lists</a>
                     </li>
+                    {% if user.is_authenticated %}
+                        <li>
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li>
+                        <a class="nav-link" href="{% url 'Home page' %}">LogIn</a>
+                        </li>
+                    {% endif %}
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
