--- a/demo/testapp/static/css/todos.css
+++ b/demo/testapp/static/css/todos.css
@@ -2,8 +2,13 @@
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 1rem;
-    height: 400px;
+    height: 500px;
     margin-bottom: 4rem;
+    overflow-y: auto;
+}
+
+.todo-table{
+    height: 400px;
     overflow-y: auto;
 }
 
