--- a/demo/testapp/templates/shopping_lists.html
+++ b/demo/testapp/templates/shopping_lists.html
@@ -2,41 +2,49 @@
 
 {% block content %}
     <h1>Shopping Lists</h1>
-    {% for shopping_list in shopping_lists %}
-        <div class="shopping_list">
-            <h2>{{ shopping_list.name }}:</h2>
-            <table class="table table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Shopping Item</th>
-                        <th scope="col">Quantity</th>
-                        <th scope="col">Unit</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in shopping_list.items.all %}
+    <div class="main-content">
+        {% for shopping_list in shopping_lists %}
+            <div class="shopping_list">
+                <h2>{{ shopping_list.name }}:</h2>
+                <table class="table table-bordered">
+                    <thead class="thead-dark">
                         <tr>
-                            <td class="title">{{ item.name }}</td>
-                            <td class="title">{{ item.quantity }}</td>
-                            <td class="title">{{ item.unit }}</td>
+                            <th scope="col">Shopping Item</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Unit</th>
                         </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        <div class="shopping_buttons">
-            <form method="POST" action="{% url 'delete_shopping_list' shopping_list.id %}">
+                    </thead>
+                    <tbody>
+                        {% for item in shopping_list.items.all %}
+                            <tr>
+                                <td class="title">{{ item.name }}</td>
+                                <td class="title">{{ item.quantity }}</td>
+                                <td class="title">{{ item.unit }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="shopping_buttons">
+                <form method="POST" action="{% url 'delete_shopping_list' shopping_list.id %}">
+                {% csrf_token %}
+                <button class="btn btn-danger">Delete</button>
+                </form>
+                <form method="GET" action="{% url 'update_shopping_list' shopping_list.id %}">
+                {% csrf_token %}
+                <button class="btn btn-primary">Update</button>
+                </form>
+            </div>
+            
+        {% endfor %}
+    </div>
+    
+    <div class="fixed-bottom-wrapper">
+        <form  method="GET" action="{% url 'add_shopping_list' %}">
             {% csrf_token %}
-            <button class="btn btn-danger">Delete</button>
-            </form>
-            <form method="GET" action="{% url 'update_shopping_list' shopping_list.id %}">
-            {% csrf_token %}
-            <button class="btn btn-primary">Update</button>
-            </form>
-        </div>
-        
-    {% endfor %}
-
+            <button class="btn btn-primary">Add todo</button>
+        </form>
+    </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
