--- a/demo/testapp/templates/shopping_lists.html
+++ b/demo/testapp/templates/shopping_lists.html
@@ -42,7 +42,7 @@
     <div class="fixed-bottom-wrapper">
         <form  method="GET" action="{% url 'add_shopping_list' %}">
             {% csrf_token %}
-            <button class="btn btn-primary">Add todo</button>
+            <button class="btn btn-primary">Add shopping list</button>
         </form>
     </div>
     
